<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    android:layout_height="458dp"
    android:layout_gravity="center"
    android:background="@drawable/borderframe"
    android:orientation="vertical"
    tools:ignore="RtlSymmetry">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/shakeSettTitleText"
                android:layout_width="252dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_gravity="end"
                android:layout_toLeftOf="@+id/switchShakeSett"
                android:fontFamily="Roboto"
                android:padding="10dp"
                android:text="@string/Shake_unlock"
                android:textColor="@color/Black"
                android:textSize="20sp"
                android:textStyle="normal" />

            <Switch
                android:id="@+id/switchShakeSett"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:checked="true"
                android:gravity="center"
                android:padding="3dp"
                android:theme="@style/My_Switch"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <TextView
            android:id="@+id/shakeSettBodyText"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:layout_gravity="end"
            android:fontFamily="Roboto"
            android:paddingLeft="11dp"
            android:paddingTop="5dp"
            android:text="@string/Shake_s"
            android:textColor="@color/Black2"
            android:textSize="14sp"
            android:textStyle="normal|normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">


            <com.appyvet.materialrangebar.RangeBar xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/rangebar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:mrb_connectingLineColor="@color/rangeSeekBarCircleColor"
                app:mrb_connectingLineWeight="4dp"
                app:mrb_leftSelectorColor="@color/rangeSeekBarCircleColor"
                app:mrb_pinColor="@android:color/transparent"
                app:mrb_pinTextColor="@color/colorInclude"
                app:mrb_rangeBar="true"
                app:mrb_rangeBarColor="@color/rangeSeekBarColor"
                app:mrb_rangeBarPaddingBottom="30dp"
                app:mrb_rightSelectorColor="@color/rangeSeekBarCircleColor"
                app:mrb_selectorBoundaryColor="@android:color/transparent"
                app:mrb_selectorBoundarySize="0dp"
                app:mrb_selectorSize="6dp"
                app:mrb_temporaryPins="true"
                app:mrb_tickEnd="5"
                app:mrb_tickDefaultColor="@android:color/transparent"
                app:mrb_tickInterval="1"
                app:mrb_tickLabelSize="4sp"
                app:mrb_tickStart="0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/minValueSeekBar"
                    android:layout_width="152dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="Roboto"
                    android:paddingLeft="12dp"
                    android:text="@string/MinValueShake"
                    android:textColor="@color/Black2"
                    android:textSize="14sp"
                    android:textStyle="normal|normal" />

                <TextView
                    android:id="@+id/maxValueSeekBar"
                    android:layout_width="152dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="Roboto"
                    android:gravity="end"
                    android:paddingRight="12dp"
                    android:text="@string/MaxValueSeekBar"
                    android:textColor="@color/Black2"
                    android:textSize="14sp"
                    android:textStyle="normal|normal" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/safeSliderSett"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_gravity="end"
            android:background="@color/White"
            android:fontFamily="Roboto"
            android:onClick="saveShakeSetting"
            android:padding="10dp"
            android:text="Сохранить"
            android:textAlignment="center"
            android:textColor="#673AB7"
            android:textSize="14sp"
            android:textStyle="normal"
            />

    </LinearLayout>
</RelativeLayout>