<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    android:layout_height="458dp"
    android:layout_gravity="center"
    android:background="@drawable/borderframe"
    android:orientation="vertical"
    android:paddingRight="1dp"
    tools:ignore="RtlSymmetry">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView35"
                android:layout_width="252dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_gravity="end"
                android:layout_toLeftOf="@+id/switch1"
                android:fontFamily="Roboto"
                android:padding="10dp"
                android:text="@string/Math_unlock"
                android:textColor="@color/Black"
                android:textSize="20dp"
                android:textStyle="normal"
                tools:targetApi="jelly_bean" />

            <ImageButton
                android:id="@+id/arrowShake"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:background="#FFFFFF"
                android:src="@mipmap/ic_arrow" />


        </LinearLayout>

        <TextView
            android:id="@+id/textView36"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_gravity="end"
            android:fontFamily="Roboto"
            android:paddingLeft="11dp"
            android:paddingTop="5dp"
            android:text="@string/Unlock_text1"
            android:textColor="@color/Black2"
            android:textSize="14dp"
            android:textStyle="normal|normal"
            tools:ignore="RtlSymmetry"
            tools:targetApi="jelly_bean" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="213dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingStart="11dp"
            android:paddingLeft="11dp"
            android:paddingEnd="11dp"
            android:paddingRight="11dp">

            <TextView
                android:id="@+id/textView37"
                android:layout_width="306dp"
                android:layout_height="63dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_gravity="center_horizontal"
                android:fontFamily="Roboto"
                android:gravity="top"
                android:paddingLeft="14dp"
                android:paddingTop="5dp"
                android:text="@string/Unlock_text2"
                android:textColor="@color/Gray"
                android:textSize="14sp"
                android:textStyle="normal|normal"
                tools:ignore="RtlSymmetry"
                tools:targetApi="jelly_bean" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_view_password"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="153dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:hint="@string/Password_enter"
                    android:inputType="numberPassword"
                    android:padding="10dp"
                    android:textColor="@color/Gray"
                    android:textSize="14dp"
                    tools:ignore="SpUsage" />

                <Button
                    android:id="@+id/btn_clear"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/delete"
                    android:shadowColor="@color/Black"
                    android:visibility="visible" />
            </LinearLayout>


        </LinearLayout>


        <Button
            android:id="@+id/button4"

            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_gravity="end"
            android:background="@color/White"
            android:fontFamily="Roboto"
            android:padding="10dp"
            android:text="Проверить"
            android:textAlignment="center"
            android:textColor="#673AB7"
            android:textSize="14dp"
            android:textStyle="normal"
            tools:targetApi="jelly_bean" />


    </LinearLayout>

</RelativeLayout>