<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_width="320dp"
    android:layout_height="458dp"
    android:background="@drawable/borderframe"
    android:paddingRight="1dp"
    tools:ignore="RtlSymmetry">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView29"
                android:layout_width="252dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_gravity="end"
                android:layout_toLeftOf="@+id/switch1"
                android:fontFamily="Roboto"
                android:padding="10dp"
                android:text="@string/Password_unlock"
                android:textColor="@color/Black"
                android:textSize="20sp"
                android:textStyle="normal" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:checked="true"
                android:theme="@style/My_Switch"
                android:padding="10dp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView30"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="end"
            android:fontFamily="Roboto"
            android:paddingLeft="11dp"
            android:paddingTop="5dp"
            android:paddingRight="0dp"

            android:text="@string/Password_s"
            android:textColor="@color/Black2"
            android:textSize="14sp"
            android:textStyle="normal|normal"
             />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="213dp"
            android:orientation="horizontal"
            android:layout_weight="1.04">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_view_password"
                    >
                    <EditText
                        android:id="@+id/editText3"
                        android:layout_width="153dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:ems="10"
                        android:background="@android:color/transparent"
                        android:inputType="textVisiblePassword"
                        android:padding="10dp"
                        android:placeholder="@string/Password_enter"
                        android:textColor="@color/Gray"
                        android:textSize="14dp"
                        tools:ignore="SpUsage" />

                    <Button
                        android:id="@+id/btn_clear"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="end|center_vertical"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/delete"
                        android:shadowColor="@color/Black"
                        android:visibility="visible" />
                </LinearLayout>


            </FrameLayout>
        </LinearLayout>

        <Button
            android:id="@+id/button4"

            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_gravity="end"
            android:textSize="14sp"
            android:fontFamily="Roboto"
            android:textStyle="normal"
            android:padding="10dp"
            android:background="@color/White"
            android:textAlignment="center"
            android:textColor="#673AB7"
            android:text="Сохранить"/>


    </LinearLayout>

</RelativeLayout>